Initial 26.1 work